# WAAD

./: LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
ad-tree/: README.md  setup.py
ad-tree/ad_tree/: array_record.py  dataset.py  file_record.py  iterated_tree_contingency_table.py  sparse_ADTree.py
doc/source/: conf.py  index.rst
doc/source/_static/: custom.css
doc/source/_templates/: autosummary_template.rst  layout.html
doc/source/heuristics/: index.rst
doc/source/utils/: index.rst
notebooks/: README.md
notebooks/H1/: H1_guide.md  pipeline_H1.ipynb  pipeline_H1_generique.ipynb
notebooks/H2/: H2_guide.md  pipeline_H2.ipynb  pipeline_H2_generique.ipynb
notebooks/H3/: H3_guide.md  pipeline_H3.ipynb
notebooks/H7/: H7_guide.md  pipeline_H7.ipynb
notebooks/miscellaneous/: Database.ipynb  exploration.ipynb  longest_common_substring_clustering.ipynb  longest_common_substring_clustering_guide.md  prototype_tuples_big_data.ipynb  protoype_timeseries.ipynb  time_series_guide.md  tuples_analysis.ipynb  tuples_big_data_groupings.ipynb  tuples_big_data_guide.md
waad/heuristics/H1/: ip_clustering.py  ip_processing.py
waad/heuristics/H2/: machines_clustering.py  machines_processing.py
waad/heuristics/H3/: select_valid_accounts.py
waad/utils/: anomalous_asset.py  asset.py  clustering.py  combinations_utils.py  config.py  constants.py  data.py  fait_notable.py  indicators.py  kmeans_clustering.py  postgreSQL_utils.py  rule.py  single_tuple_analyser.py  time_series_utils.py  tuples_analyser.py  tuples_big_data.py
(+22 files in other folders)
